# equirect

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  image.cpp  sphere.cpp  transformations.cpp
src/includes/: image.h  sphere.h
tests/: CMakeLists.txt  test_sphere.cpp  test_works.cpp
